refactor: 딜러 공개 카드 반환 형식 수정 및 중복 메서드 호출 수정